[package]
name = "timey"
version = "0.1.0"
description = "Timey application helping keep time via stopwatches"
authors = ["Jon Johnson"]
license = ""
repository = "https://github.com/jonjohnsontc/timey-gui"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri = { version = "1.0.0", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
